aobut me updates

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -52,11 +52,27 @@ integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbi
 
 <div class="container">
   <h2 class="subtitle is-6">October 16, 2025</h2>
-  <h1 class="subtitle is-size-4-mobile is-size-3-desktop">Kobe and Pascal</h1>
+  <h2 class="subtitle is-size-4-mobile is-size-3-desktop">Kobe and Pascal</h1>
   <div class="content">
     <p>Kobe and Pascal</p>
 
   </div>
+  <h2 class="subtitle is-size-5-mobile is-size-4-desktop">Frequent Tags</h2>
+  
+    <a href="/tags/brecht"> brecht (1) &nbsp;</a>
+  
+    <a href="/tags/christopher-hill"> christopher hill (1) &nbsp;</a>
+  
+    <a href="/tags/communism"> communism (1) &nbsp;</a>
+  
+    <a href="/tags/english-history"> english history (1) &nbsp;</a>
+  
+    <a href="/tags/english-revolution"> english revolution (1) &nbsp;</a>
+  
+    <a href="/tags/poetry"> poetry (1) &nbsp;</a>
+  
+    <a href="/tags/proletariat"> proletariat (1) &nbsp;</a>
+  
 </div>
 <div class="container has-text-centered">
     
