--- a/public/about/index.html
+++ b/public/about/index.html
@@ -51,10 +51,10 @@ integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbi
   </div>
 
 <div class="container">
-  <h2 class="subtitle is-6">October 16, 2025</h2>
+  <h2 class="subtitle is-6">January 1, 0001</h2>
   <h2 class="subtitle is-size-4-mobile is-size-3-desktop">Kobe and Pascal</h1>
   <div class="content">
-    <p>Kobe and Pascal</p>
+    <p>Literature, science, history, politics and the rest.</p>
 
   </div>
   <h2 class="subtitle is-size-5-mobile is-size-4-desktop">Frequent Tags</h2>
