--- a/public/about/index.html
+++ b/public/about/index.html
@@ -6,7 +6,7 @@
 
 
 
-<title>Kobe and Pascal | Kobe and Pascal</title>
+<title>About | Kobe and Pascal</title>
 
 <link rel="stylesheet" href="https://kobeandpascal.com//css/styles.css">
 
@@ -52,7 +52,7 @@ integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbi
 
 <div class="container">
   <h2 class="subtitle is-6">January 1, 0001</h2>
-  <h1 class="subtitle is-size-4-mobile is-size-3-desktop">Kobe and Pascal</h1>
+  <h1 class="subtitle is-size-4-mobile is-size-3-desktop">About</h1>
   <div class="content">
     <p>Literature, science, history, politics and the rest.</p>
 
